--- a/Animagine/package.json
+++ b/Animagine/package.json
@@ -61,6 +61,7 @@
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.155.0",
     "vaul": "^0.9.3",
+    "vite": "^5.4.18",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -79,7 +80,7 @@
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.11",
     "typescript": "^5.5.3",
-    "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.18"
+    "typescript-eslint": "^8.0.1"
+    
   }
 }
